--- a/www/index.html
+++ b/www/index.html
@@ -18,16 +18,10 @@
         <!-- your app's js -->
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
+        <script src="js/services.js"></script>
+        <script src="js/ngStorage.min.js"></script>
     </head>
     <body ng-app="apartmentChecklist">
-
-        <ion-nav-bar class="bar-positive">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-
-            <ion-nav-buttons side="left">
-            </ion-nav-buttons>
-        </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
     </body>
 </html>
